# HoloSegment

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DefaultEyeflowParams.json  README.md  WORKFLOW.md  config_example.json  create_test_holo.py  debug_config.json  h5_schema.json  h5_schema_next.json  h5_schema_old.json  models.yaml  output_config.json  pyproject.toml  requirements.txt  setup.py  verify_output.py
config/: DefaultEyeflowParams.json  h5_schema.json  output_config.json
dopplerview/: app.py  cli.py  tk_app.py
dopplerview/input_output/: output_manager.py  output_renderer.py  read_folder.py  user_config.py
dopplerview/pipeline/: dag.py  pipeline.py  step.py
dopplerview/resources/: default_dv_params.json  h5_schema.json
dopplerview/segmentation/: pulse_analysis.py
dopplerview/utils/: parallelization_utils.py
holosegment/: app.py  cache.py  cli.py  pipeline.py  preprocessing.py  pulse_analysis.py  reader.py  segmentation.py  tk_app.py
holosegment/input_output/: debug_renderer.py  output_manager.py  output_renderer.py  read_folder.py  read_moments.py
holosegment/loading/: load_model.py  reader.py
holosegment/models/: __init__.py  builder.py  manager.py  model_wrapper.py  models.yaml  registry.py  spec.py  test_model_pipeline.py  wrapper.py
holosegment/pipeline/: dag.py  pipeline.py  step.py
holosegment/preprocessing/: normalization.py  preprocessing.py  registration.py  remove_outliers.py  resize.py
holosegment/segmentation/: artery_vein_segmentation.py  binary_segmentation.py  process_masks.py  pulse_analysis.py  signal_processing.py
installer/: DopplerView.iss  DopplerView.spec  build_installer.py
packaging/: DopplerView.iss  hook-scipy.py
scripts/: build_installer.py  bumpversion.cfg  release.py
tests/: test.ipynb
(+28 files in other folders)
