[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dopplerview"
version = "1.1.0"
description = "Doppler holography vessel segmentation pipeline"
authors = [{ name = "Marius Dubosc" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "opencv-python-headless",
    "matplotlib",
    "pandas",
    "pillow",
    "pyinstaller",
    "tqdm",
    "PyYAML",
    "h5py",
    "onnxruntime",
    "torch",
    "torchvision",
    "typer",
    "huggingface_hub",
    "tkinterdnd2"
]

[project.optional-dependencies]
ui = [
    "streamlit",
    "tkinterdnd2",
]

[project.scripts]
dopplerview = "dopplerview.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dopplerview*"]

[tool.setuptools.package-data]
dopplerview = ["resources/*.json", "resources/*.yaml"]